--- a/package.json
+++ b/package.json
@@ -2,16 +2,20 @@
   "name": "coruscant-connect",
   "version": "1.0.0",
   "description": "Social network for Coruscant",
-  "main": "server.js",
+  "main": "server.js", 
   "scripts": {
     "start": "node server.js",
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "client-install": "npm install --prefix client",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Robbie Santos",
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "concurrently": "^4.1.0",
     "express": "^4.16.4",
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.4.0",
