--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "react-moment": "^0.8.4",
     "validator": "^10.11.0"
   },
   "devDependencies": {
